# learnslam

ch10/: CMakeLists.txt
ch10/src/: pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
ch11/: CMakeLists.txt
ch11/src/: feature_training.cpp  loop_closure.cpp
ch2/: CMakeLists.txt
ch3/: CMakeLists.txt
ch3/include/: draw.h
ch3/lib/: draw.cpp
ch3/src/examples/: plotTrajectory.cpp
ch4/: CMakeLists.txt
ch4/src/: useSophus.cpp
ch5/: CMakeLists.txt
ch5/src/: imageBasics.cpp  joinMap.cpp  stereoVision.cpp  undistortImage.cpp
ch6/: CMakeLists.txt
ch6/src/: ceresCurveFitting.cpp  gaussNewton.cpp
ch7/: CMakeLists.txt
ch7/include/: FindFeatureMatches.h  bundleAdjustmentGaussNewton.h  pixel2cam.h  poseEstimation2d2d.h
ch7/lib/: FindFeatureMatches.cpp  bundleAdjustmentGaussNewton.cpp  pixel2cam.cpp  poseEstimation2d2d.cpp
ch7/src/: orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch8/: CMakeLists.txt
ch8/src/: direct_method.cpp  optical_flow.cpp
ch9/: CMakeLists.txt
ch9/include/: SnavelyReprojectionError.h  common.h  rotation.h
ch9/lib/: common.cpp
ch9/src/: bundle_adjustment_ceres.cpp  bundle_adjustment_g2o.cpp
